fixed scrollbar appearing fixed some styling issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,8 @@
 }
 
 body{
+    margin: 0;
+    padding: 0;
     background-color: #252933;
     color: #e84c57;
 }
@@ -99,6 +101,7 @@ button:hover{
     border-radius: 10px;
     padding: 20px;
     width: 500px;
+    gap: 20px;
   }
 
 .modal-content p{
